name:                wkt-geom
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/wkt-geom#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Wkb
                     , Data.Wkb.Endian
                     , Data.Wkb.Geometry
                     , Data.Wkb.GeometryCollection
                     , Data.Wkb.Line
                     , Data.Wkb.Point
                     , Data.Wkb.Polygon
                     , Data.Wkt.Line
                     , Data.Wkt.Point
                     , Data.Wkt.Polygon
                     , Data.Wkt.GeometryCollection
                     , Data.Wkt

  build-depends:       base >= 4.8 && < 5
                     , binary
                     , bytestring
                     , geojson
                     , scientific
                     , trifecta 
                     , utf8-string
  ghc-options:         -Wall -Werror -O2
  default-language:    Haskell2010

executable wkt-geom-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , wkt-geom
  default-language:    Haskell2010

test-suite wkt-geom-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:       Data.Wkb.EndianSpec
                     , Data.Wkb.GeometrySpec
                     , Data.Wkb.GeometryCollectionSpec
                     , Data.Wkb.LineSpec
                     , Data.Wkb.PointSpec
                     , Data.Wkb.PolygonSpec
                     , Data.Wkt.GeometryCollectionSpec
                     , Data.Wkt.LineSpec
                     , Data.Wkt.PointSpec
                     , Data.Wkt.PolygonSpec            
  main-is:             Spec.hs
  build-depends:       base
                     , binary
                     , ansi-wl-pprint
                     , bytestring
                     , geojson
                     , hspec
                     , lens
                     , QuickCheck
                     , scientific
                     , trifecta 
                     , wkt-geom
  ghc-options:         -Wall -Werror
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/wkt-geom
